Rename/Changed Images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CasinoRoll</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
   </div> -->
     <button type="button" class="mb-3" id="musics">Music ON</button>
     <header><h2 id="heading">Casino Roll</h2></header>
-   
+
     <main>
       <section id="left">
         <div class="container-fluid">
@@ -37,7 +37,8 @@
               />
             </div>
             <div class="col-sm-4 btna">
-              <img class="ball"
+              <img
+                class="ball"
                 class="left_images"
                 src="images/Picture2.svg"
                 alt="Image 2"
@@ -54,7 +55,7 @@
             </div>
             <div class="col-sm-4 btna">
               <img
-              class="clock"
+                class="clock"
                 class="left_images roll"
                 src="images/Picture3.svg"
                 alt="Image 3"
@@ -73,7 +74,7 @@
           <div class="row">
             <div class="col-sm-4 btna">
               <img
-              class="apple"
+                class="apple"
                 class="left_images"
                 src="images/Picture4.svg"
                 alt="Image 4"
@@ -126,7 +127,9 @@
       <section id="right" class="btna">
         <div class="righthead">
           <div class="frh1">
-            <h3 id="score" class="heading"><span>&nbsp;&nbsp;</span>Cash:$500</h3>
+            <h3 id="score" class="heading">
+              <span>&nbsp;&nbsp;</span>Cash:$500
+            </h3>
           </div>
           <h5 id="gamestatus"></h5>
           <button class="btn heading" id="reset">Reset</button>
@@ -198,37 +201,36 @@
             </div>
           </div>
         </div>
-     <div id="gif" class="hidden">
+        <div id="gif" class="hidden">
           <iframe
-          src="https://giphy.com/embed/UXAUwJZ2McfIMey0vb"
-          width="48"
-          height="48"
-          frameborder="0"
-          class="giphy-embed"
-          allowfullscreen
-        ></iframe>
-        </div>    
-       
+            src="https://giphy.com/embed/UXAUwJZ2McfIMey0vb"
+            width="48"
+            height="48"
+            frameborder="0"
+            class="giphy-embed"
+            allowfullscreen
+          ></iframe>
+        </div>
 
-        <div  id="switch">
+        <div id="switch">
           <h3 class="neon3">Roll dice</h3>
         </div>
         <audio id="myAudio">
-          <source src="dice-142528.mp3" type="audio/mpeg" />
+          <source src="Audio/DiceRoll.mp3" type="audio/mpeg" />
         </audio>
 
         <audio id="myApplause">
-          <source src="1742406481_258102835_1872772008.mp3" type="audio/mpeg" />
+          <source src="Audio/WinningApplause.mp3" type="audio/mpeg" />
         </audio>
 
         <audio id="music">
-          <source src="melodyloops-preview-baby-fun-2m30s.mp3"  type="audio/mpeg" />
+          <source src="Audio/Bg.mp3" type="audio/mpeg" />
         </audio>
       </section>
     </main>
-      <footer>
-        <p id="tm">&copy; 2023 University of Central Missouri Group</p>
-      </footer>
+    <footer>
+      <p id="tm">&copy; 2023 University of Central Missouri Group</p>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.6.3.min.js"
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
