--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <!-- <div>
-    <span id="musics"><i class="bi bi-volume-up"></i></span>
-    <span id="musics"><i class="bi bi-volume-mute"></i></span>
-  </div> -->
-    <button type="button" class="mb-3" id="musics">Music ON</button>
+
+    <button type="button" class="mb-3" id="musics">Music on</button>
     <header><h2 id="heading">Casino Roll</h2></header>
 
     <main>
