--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <button type="button" class="mb-3" id="musics">Music on</button>
+    <button type="button" class="mb-3" id="musics">music on</button>
     <header><h2 id="heading">Casino Roll</h2></header>
 
     <main>
